Switch tank to btrfs

--- a/group_vars/all/node_exporter.yml
+++ b/group_vars/all/node_exporter.yml
@@ -1,9 +1,9 @@
 ---
 node_exporter_collectors:
-  - systemd
-  - btrfs  # Only for >=v1.0
+  - btrfs
 node_exporter_no_collectors:
   - mdadm
+  - zfs
   - xfs
   - bcache
   - textfile
