Borg backup for desktop and server
Using centralized repository on server as described in the borg docs.

--- a/desktop.yml
+++ b/desktop.yml
@@ -17,6 +17,9 @@
         ports: "{{ ports | combine(_ports, recursive=true) }}"
       tags: ["always"]
 
+    - import_role: { name: borg }
+      tags: ["borg"]
+
     - import_role: { name: node_exporter }
       tags: ["prometheus-stack", "node_exporter"]
 
