--- a/host_vars/desktop/vars.yml
+++ b/host_vars/desktop/vars.yml
@@ -2,3 +2,4 @@
 _ports:
   nvidia_exporter: 9401
 node_exporter_web_listen_address: "0.0.0.0:{{ node_exporter_port }}"
+borg_desktop_passphrase: "{{ vault_borg_desktop_passphrase }}"
