--- a/host_vars/server/vars.yml
+++ b/host_vars/server/vars.yml
@@ -10,6 +10,8 @@ _ports:
   psql_exporter: 9187
   rtmp: 1935
   vouch: 8682
+borg_remote_passphrase: "{{ vault_borg_remote_passphrase }}"
+borg_server_passphrase: "{{ vault_borg_server_passphrase }}"
 container_data: "/srv/containers"
 postgres_service_name: postgresql-13.service
 rsyno_dsm_domain: "{{ vault_rsyno_dsm_domain }}"
