--- a/host_vars/server/systemd.yml
+++ b/host_vars/server/systemd.yml
@@ -142,6 +142,18 @@ systemd_units:
       timer:
         # Every first day of the month at 03:00
         oncalendar: "*-*-01 03:00:00"
+    
+  - name: btrfs-mail-scrub
+    service:
+      enabled: true
+      unit:
+        description: Email scrub results
+        after: [ "btrfs-scrub.service" ]
+      service:
+        exec_start:
+          - "bash -c 'tmp=\"# /\\n$(btrfs scrub status /)\\n\"; for d in /dev/mapper/tank_disk*; do tmp+=\"\\n# $d\\n$(btrfs scrub status $d)\\n\"; done; echo -e \"$tmp\" | mail -s \"btrfs scrub results\" {{ my_email }}'"
+      install:
+        wantedby: btrfs-scrub.service
 
   - name: docker-on-boot
     disabled: yes
