--- a/host_vars/server/borg.yml
+++ b/host_vars/server/borg.yml
@@ -16,6 +16,8 @@ borg_backups:
     backup_name: "root"
     paths:
       - "/"
+      - "/boot"
+      - "/boot/efi"
       - "/srv"
       - "/var"
       - "/home"
