--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
     },
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "ansible.credentialsConfigured": true
+    "editor.detectIndentation": false
 }
