--- a/host_vars/server/samba.yml
+++ b/host_vars/server/samba.yml
@@ -44,7 +44,8 @@ samba_shares:
     comment: "Rust Storage"
     path: "/tank"
     writable: yes
-    "hide files": "/yes/"
+    "hide files": "yes/time-machine"
+    "veto files": "time-machine"
 
   www:
     comment: "Web Root"
