--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "**/*.yml": "ansible"
+        "**/*.yml": "yaml"
     },
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
