--- a/desktop.yml
+++ b/desktop.yml
@@ -23,5 +23,8 @@
     - import_role: { name: node_exporter }
       tags: ["prometheus-stack", "node_exporter"]
 
+    - import_role: { name: btrbk }
+      tags: ["btrbk"]
+
     # - import_role: { name: nvidia_exporter }
     #   tags: ["prometheus-stack", "nvidia_exporter"]
