--- a/server.yml
+++ b/server.yml
@@ -44,6 +44,9 @@
     - import_role: { name: borg }
       tags: ["borg"]
 
+    - import_role: { name: btrbk }
+      tags: ["btrbk"]
+
 #    - import_role: { name: sanoid }
 #      tags: ["sanoid"]
 
