--- a/host_vars/server/systemd.yml
+++ b/host_vars/server/systemd.yml
@@ -194,6 +194,25 @@ systemd_units:
         onbootsec: 15min
         onunitactivesec: 15min
 
+  - name: nextcloud-gdrive
+    service:
+      unit:
+        description: Backup Nextcloud to Google Drive
+        after: [ "network.target" ]
+        requires: [ "network.target" ]
+        extra:
+          ConditionPathExists: "{{ container_data }}/nextcloud/data/data/{{ my_email }}/files"
+      service:
+        user: "{{ my_user }}"
+        group: "{{ my_user }}"
+        exec_start: [ "rclone sync {{ container_data }}/nextcloud/data/data/{{ my_email }}/files gcrypt:" ]
+    timer:
+      enabled: true
+      started: true
+      timer:
+        # Every 7 days at 05:00
+        oncalendar: "*-*-01/7 05:00:00"
+
   - name: nextcloud-cron
     disabled: yes
     service:
