--- a/host_vars/server/systemd.yml
+++ b/host_vars/server/systemd.yml
@@ -41,6 +41,29 @@ systemd_units:
         # Daily at 03:00
         oncalendar: "*-*-* 03:00:00"
 
+  - name: backup-gdrive
+    service:
+      unit:
+        description: Backup important files to Google Drive
+        after: [ "network.target" ]
+        requires: [ "network.target" ]
+        extra:
+          ConditionPathExists: "{{ container_data }}/nextcloud/data/data/{{ my_email }}/files"
+      service:
+        user: "{{ my_user }}"
+        group: "{{ my_user }}"
+        exec_start:
+          - "rclone sync {{ container_data }}/nextcloud/data/data/{{ my_email }}/files gcrypt:Nextcloud"
+          - "rclone sync /tank/backup/gitea gcrypt:gitea"
+          - "rclone sync /tank/backup/luks_headers gcrypt:luks_headers"
+          - "rclone sync /tank/backup/pgsql gcrypt:pgsql"
+    timer:
+      enabled: true
+      started: true
+      timer:
+        # Every day at 05:00
+        oncalendar: "*-*-* 05:00:00"
+
   - name: ngx-recompile-modules
     timer:
       enabled: false
@@ -193,25 +216,6 @@ systemd_units:
       timer:
         onbootsec: 15min
         onunitactivesec: 15min
-
-  - name: nextcloud-gdrive
-    service:
-      unit:
-        description: Backup Nextcloud to Google Drive
-        after: [ "network.target" ]
-        requires: [ "network.target" ]
-        extra:
-          ConditionPathExists: "{{ container_data }}/nextcloud/data/data/{{ my_email }}/files"
-      service:
-        user: "{{ my_user }}"
-        group: "{{ my_user }}"
-        exec_start: [ "rclone sync {{ container_data }}/nextcloud/data/data/{{ my_email }}/files gcrypt:" ]
-    timer:
-      enabled: true
-      started: true
-      timer:
-        # Every 7 days at 05:00
-        oncalendar: "*-*-01/7 05:00:00"
 
   - name: nextcloud-cron
     disabled: yes
