Rework hosts, add playbooks directory

--- a/playbooks/desktop.yml
+++ b/playbooks/desktop.yml
@@ -1,23 +1,34 @@
 #!/usr/bin/env -S ansible-playbook
 ---
-- name: Laptop playbook
+- name: Override ansible_connection if needed
+  import_playbook: prep_local.yml
+  tags: ["always"]
+
+- name: Desktop playbook
   gather_facts: true
-  diff: yes
-  hosts: laptop
+  hosts: desktop
   vars:
     node_exporter_skip_install: false
-    node_exporter_no_sysusers: true
     node_exporter_version: "latest"
     node_exporter_port: "{{ ports.node_exporter }}"
-    node_exporter_collectors: []
+    nvidiaexporter_port: "{{ ports.nvidia_exporter }}"
   tasks:
     - import_role: { name: common }
-      tags: ["all", "common"]
+      tags: ["always", "common"]
 
     - name: Merge ports
       set_fact:
         ports: "{{ ports | combine(_ports, recursive=true) }}"
       tags: ["always"]
 
+    - import_role: { name: borg }
+      tags: ["borg"]
+
     - import_role: { name: node_exporter }
       tags: ["prometheus-stack", "node_exporter"]
+
+    - import_role: { name: btrbk }
+      tags: ["btrbk"]
+
+    # - import_role: { name: nvidia_exporter }
+    #   tags: ["prometheus-stack", "nvidia_exporter"]
