--- a/host_vars/dresrv/postgres_exporter.yml
+++ b/host_vars/dresrv/postgres_exporter.yml
@@ -1,2 +1,2 @@
 ---
-postgres_exporter_web_listen_address: "127.0.0.1:{{ psqlexporter_port }}"
+postgres_exporter_web_listen_address: "127.0.0.1:{{ postgres_exporter_port }}"
