--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ end_of_line = lf
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+trim_trailing_whitespace = true
 
 [*.{py,sh,py.j2, sh.j2}]
 indent_style = space
