--- a/roles/motion/defaults/main.yml
+++ b/roles/motion/defaults/main.yml
@@ -3,7 +3,9 @@
 motion_script_dir: "/usr/local/bin"
 motion_config_file: "/etc/motion/motion.conf"
 motion_sysconfig_file: "/etc/default/motion"
-motion_config:
+motion_config: {}
+motion_scripts: []
+motion_default_config:
   daemon: "on"
   setup_mode: "off"
   log_level: "6"
@@ -13,7 +15,7 @@ motion_config:
   width: "1024"
   height: "768"
   framerate: "3"
-  text_left: "ENTRANCE"
+  text_left: "CAMERA1"
   text_right: '%Y-%m-%d\n%T-%q'
   emulate_motion: "on"
   threshold: "1500"
@@ -23,14 +25,13 @@ motion_config:
   pre_capture: "3"
   post_capture: "0"
   picture_output: "off"
-  on_movie_end: "{{ motion_script_dir }}/after-movie %f"
-  on_picture_save: "{{ motion_script_dir }}/after-picture %f"
   snapshot_interval: "7200"
   movie_output: "on"
   movie_max_time: "3600"
   movie_quality: "60"
   movie_codec: "mkv:libx265"
   movie_filename: "%Y%m%d-%H%M%S-%v"
+  picture_filename: "%Y%m%d-%H%M%S-%v"
   webcontrol_port: "0"
   webcontrol_localhost: "on"
   webcontrol_parms: "0"
