Set concat-motion to oneshot
ExecStartPost needs to run after ffmpeg finishes, not right after it starts

--- a/host_vars/dresrv/systemd.yml
+++ b/host_vars/dresrv/systemd.yml
@@ -75,7 +75,7 @@ systemd_units:
         extra: |
           ConditionPathExists=/tank/media/motion
       service:
-        type: exec
+        type: oneshot
         user: "motion"
         group: "motion"
         environment:
