--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ roles_path = roles
 hosts_file = hosts
 filter_plugins = filter_plugins
 vault_password_file = .secrets/vault_key
+library = ./library
