Add samba_add_vfs option
Whole thing needs redoing, but at least it's optional now

--- a/roles/samba/defaults/main.yml
+++ b/roles/samba/defaults/main.yml
@@ -25,6 +25,8 @@ samba_shares: {}
   #   writable: yes
 
 
+samba_add_vfs: false
+
 ### Options below are only used for setting VFS object options ###
 
 # Name of the home directory share, probably 'homes'
